# cli5

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  WINDOWS.md  install-windows.ps1
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
endpoints/: cloudflare_ai.json  cloudflare_dns.json  cloudflare_firewall.json  cloudflare_page_rules.json  cloudflare_ssl.json  cloudflare_user.json  cloudflare_zones.json
src/: main.rs
src/api/: client.rs  endpoints.rs  graphql.rs  mod.rs  response.rs
src/cli/: ai.rs  analytics.rs  cache.rs  config_cmd.rs  dns.rs  firewall.rs  mod.rs  pages.rs  raw.rs  settings.rs  ssl.rs  storage.rs  tunnel.rs  workers.rs  zones.rs
src/config/: mod.rs
src/output/: mod.rs
