[package]
name = "cli5"
version = "0.5.0"
edition = "2021"
authors = ["Pawel Mazz <pmazurki@me.com>"]
description = "Modern Cloudflare CLI - REST & GraphQL API client"
license = "MIT"
repository = "https://github.com/pmazurki/cli5"
keywords = ["cloudflare", "cli", "api", "graphql"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env", "color"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Colors and formatting
owo-colors = "4.1"
console = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# GraphQL
graphql_client = "0.14"

# Utils
once_cell = "1.20"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
opt-level = "z"      # Optimize for size instead of speed

[profile.release-speed]
inherits = "release"
opt-level = 3        # If you prefer speed over size

